<resources>
    <string name="app_name">Gestor de Vida</string>

    <string name="default_user">El nombre va acá</string>

    <!-- Items que van en el navigation drawer -->
    <string name="item_perfil">Perfil</string>
    <string name="item_calendario">Calendario</string>
    <string name="item_actividades">Actividades</string>
    <string name="item_objetivos">Objetivos</string>
    <string name="item_buscar">Buscar Actividad</string>
    <string name="item_estadisticas">Estadísticas</string>
    <!--  -->
    <string name="item_compartir">Compartir</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>
    <string name="action_save">Guardar</string>
    <string name="action_delete">Borrar</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="titulo_mercurio">Mercurio</string>

    <string name="info_mercurio">Mercurio es el planeta del Sistema Solar más próximo al Sol y el más pequeño. Forma parte de los denominados planetas interiores o rocosos y carece de satélites. Se conocía muy poco sobre su superficie hasta que fue enviada la sonda planetaria Mariner 10 y se hicieron observaciones con radar y radiotelescopios.</string>

    <string name="message_confirm_delete">¿ Eliminar la actividad \"%1$s\" ?</string>
    <string name="message_confirm_exit">¿ Salir del Gestor de Vida ?</string>

    <string name="error_activity_name">Escriba al menos 3 caracteres</string>
    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Comenzar!</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">La dirección de email es inválida</string>
    <string name="error_invalid_password">La contraseña es inválida</string>
    <string name="error_incorrect_password">La constraseña es incorrecta</string>
    <string name="error_username_duplicated">Nombre de usuario ya existe</string>
    <string name="error_username_invalid">Nombre de usuario no existe</string>
    <string name="error_network_timeout">El servidor tardó demasiado en responder</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Debe permitir a la app acceder a su lista de contactos"</string>
    <string name="first_welcome">Bienvenido al Gestor de Vida!</string>
    <string name="first_button_login">Login</string>
    <string name="first_button_register">Registrarse</string>
    <string name="prompt_name">Nombre</string>
    <string name="login_genero">Género</string>
    <string name="login_masculino">Masculino</string>
    <string name="login_femenino">Femenino</string>
    <string name="login_tipo_usuario">Tipo de Usuario</string>
    <string name="login_user_free">Free</string>
    <string name="login_user_pemium">Premium </string>
    <string name="login_user_promotor">Premium Promotor</string>
    <string name="login_nacimiento">Fecha de Nacimiento</string>
    <string name="error_invalid_name">El nombre es inválido</string>
    <string name="error_invalid_nacimiento">Ingrese su fecha de nacimiento así: DD-MM-AAAA</string>
    <!-- hugo -->
    <string name="url">http://192.168.1.102:8080/</string>
    <!-- localhost -->
    <!--string name="url">http://10.0.2.2:8080/</string> -->
    <string name="first_description">La aplicacion que los ayudara a alcanzar su maximo potencial.</string>
    <string name="first_extended_description">Organice su rutina, fije objetivos, busque eventos interesantes, salga de su zona de confort y enfrente la vida con una nueva perspectiva!</string>
    <string name="action_search">Buscar</string>
    <!-- lucas -->
    <!-- <string name="url">http://192.168.0.10:8080/</string> -->
</resources>
