<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/item_perfil" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/item_calendario" />
        <item
            android:id="@+id/nav_actividades"
            android:checked="true"
            android:icon="@drawable/ic_menu_bulleted_list"
            android:title="@string/item_actividades" />
        <item
            android:id="@+id/nav_objetivos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/item_objetivos" />
        <item
            android:id="@+id/nav_buscar"
            android:title="@string/item_buscar" />
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@drawable/ic_menu_stats_24dp"
            android:title="@string/item_estadisticas" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/item_compartir" />
            <!-- <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" /> -->
        </menu>
    </item>

</menu>
